--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "dominos-deploy-client",
+  "name": "dominos_deploy-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "axios": "^0.19.2",
+    "dominos": "^2.1.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "nodemon": "^2.0.2",
+    "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
+    "react-dom": "^16.12.0",
+    "react-materialize": "^3.5.9",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
